src/public/styles/components/_avatar.scss
/* Avatar
   ========================================================================== */

.avatar {
  @include anim(opacity);
  border-radius: 50%;
  display: block;
  text-align: center;
  text-decoration: none;
}

.avatar:hover {
  opacity: .8;
}

/* Avatar · Sizes
   ========================================================================== */

$small : 3.6rem;
$medium: 5.6rem;
$large : 9.2rem;

.avatar-small {
  width: $small;
  height: $small;
}

.avatar-medium {
  width: $medium;
  height: $medium;
}

.avatar-large {
  width: $large;
  height: $large;
}


/* Avatar · Photo
   ========================================================================== */

.avatar-photo {
  border-radius: 50%;
}

.avatar-small .avatar-photo {
  @extend .avatar-small;
}

.avatar-medium .avatar-photo {
  @extend .avatar-medium;
}

.avatar-large .avatar-photo {
  @extend .avatar-large;
}

/* Avatar · Initials
   ========================================================================== */

.avatar-initials {
  color: $white;
  font-weight: $semiBold;
  text-align: center;
  text-transform: uppercase;
}

.avatar-small .avatar-initials {
  font-size: $small/4;
  line-height: $small;
}

.avatar-medium .avatar-initials {
  font-size: $medium/4;
  line-height: $medium;
}

.avatar-large .avatar-initials {
  font-size: $large/4;
  line-height: $large;
}

/* Avatar · Icon
   ========================================================================== */

.avatar-icon {
  display: block;
  margin: 0 auto;
}

.avatar-small .avatar-icon {
  font-size: $small/2;
  width: $small/2;
  height: $small/2;
  padding: $small/4 0;
}

.avatar-medium .avatar-icon {
  font-size: $medium/2;
  width: $medium/2;
  height: $medium/2;
  padding: $medium/4 0;
}

.avatar-large .avatar-icon {
  font-size: $large/2;
  width: $large/2;
  height: $large/2;
  padding: $large/4 0;
}

